Bug 1625694 - Set use_desktop_relative_cursor_position in DesktopAndCursorComposer; r=ng

Upstream has removed the mode used when use_desktop_relative_cursor_position_
is set to false as well as the associated override of OnMouseCursorPosition,
so the next time we update libwebrtc, this is the behaviour we will have.
Enabling it now fixes cursor display on Linux, which at the moment only works
for some windows.

Depends on D71392

Differential Revision: https://phabricator.services.mozilla.com/D71394